--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-06  Kenichi Handa  <handa@gnu.org>
+
+	* international/characters.el: Fix simple mistake ((car chars) ->
+	elt), delete duplicated code.
+
 2012-09-30  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* term/ns-win.el (x-file-dialog): New function.
