--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,5 +1,10 @@
 2012-10-01  David Engster  <deng@randomsample.de>
 
+	* grammars/bovine-grammar.el:
+	* grammars/wisent-grammar.el: Move to lisp directory.
+
+2012-10-01  David Engster  <deng@randomsample.de>
+
 	* grammars/bovine-grammar.el (bovine--grammar-newstyle-unquote):
 	Remove.
         (bovine-grammar-expand-form): Test for emacs-major-version.
