--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-06  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (read-passwd-map): New var.
+	(read-passwd): Use `read-string' again.
+	* minibuffer.el (delete-minibuffer-contents): Make it interactive.
+
 2012-10-06  Jambunathan K  <kjambunathan@gmail.com>
 
 	* register.el (append-to-register, prepend-to-register):
