Rename a new cal-tex function, document it
* lisp/calendar/cal-tex.el (cal-tex-diary, cal-tex-cursor-week)
(cal-tex-cursor-week2, cal-tex-cursor-week-iso)
(cal-tex-cursor-week-monday): Doc fixes.
(cal-tex-cursor-week2-summary): Doc fix.
Rename from cal-tex-cursor-week-at-a-glance.

* lisp/calendar/calendar.el (calendar-mode-map):
Add cal-tex-cursor-week2-summary.

* lisp/calendar/cal-menu.el (cal-menu-context-mouse-menu):
Tweak week descriptions.  Add cal-tex-cursor-week2-summary.

* doc/emacs/calendar.texi (Writing Calendar Files): Tweak week descriptions.
Mention cal-tex-cursor-week2-summary.

--- a/doc/emacs/calendar.texi
+++ b/doc/emacs/calendar.texi
@@ -396,17 +396,20 @@ Generate a sideways-printing one-month calendar
 Generate a one-day calendar
 (@code{cal-tex-cursor-day}).
 @item t w 1
-Generate a one-page calendar for one week
+Generate a one-page calendar for one week, with hours
 (@code{cal-tex-cursor-week}).
 @item t w 2
-Generate a two-page calendar for one week
+Generate a two-page calendar for one week, with hours
 (@code{cal-tex-cursor-week2}).
 @item t w 3
-Generate an ISO-style calendar for one week
+Generate an ISO-style calendar for one week, without hours
 (@code{cal-tex-cursor-week-iso}).
 @item t w 4
-Generate a calendar for one Monday-starting week
+Generate a calendar for one Monday-starting week, with hours
 (@code{cal-tex-cursor-week-monday}).
+@item t w W
+Generate a two-page calendar for one week, without hours
+(@code{cal-tex-cursor-week2-summary}).
 @item t f w
 Generate a Filofax-style two-weeks-at-a-glance calendar
 (@code{cal-tex-cursor-filofax-2week}).
