--- a/etc/NEWS
+++ b/etc/NEWS
@@ -281,6 +281,9 @@ Use `Buffer-menu-name-width' and `Buffer-menu-size-width' instead.
 *** You can customize the header text that appears above each calendar month.
 See the variable `calendar-month-header'.
 
++++
+*** New LaTeX calendar style, produced by `cal-tex-cursor-week2-summary'.
+
 *** The calendars produced by cal-html include holidays.
 Customize cal-html-holidays to change this.
 
