--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,10 @@
 2012-10-06  Glenn Morris  <rgm@gnu.org>
 
+	* strokes.el (strokes-modeline-string):
+	* emulation/crisp.el (crisp-mode-modeline-string):
+	* eshell/esh-mode.el (eshell-status-in-modeline):
+	Aliases to defcustoms must come before the defcustom.
+
 	* calendar/cal-tex.el (cal-tex-diary, cal-tex-cursor-week)
 	(cal-tex-cursor-week2, cal-tex-cursor-week-iso)
 	(cal-tex-cursor-week-monday): Doc fixes.
