--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-06  Glenn Morris  <rgm@gnu.org>
+
+	* erc.el (erc-lurker):
+	* erc-desktop-notifications.el (erc-notifications):
+	Add missing group :version tags.
+
 2012-10-04  Julien Danjou  <julien@danjou.info>
 
 	* erc-desktop-notifications.el: Rename from erc-notifications to
@@ -9,8 +15,7 @@
 
 2012-09-17  Chong Yidong  <cyd@gnu.org>
 
-	* erc-page.el (erc-page-function): 
-
+	* erc-page.el (erc-page-function):
 	* erc-stamp.el (erc-stamp): Doc fix.
 
 2012-08-21  Josh Feinstein <jlf@foxtail.org>
