--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-06  Glenn Morris  <rgm@gnu.org>
+
+	* admin.el (cusver-new-version): New variable.
+	(cusver-scan): Check if containing group has a :version.
+	(cusver-check): Add VERSION argument.
+
 2012-10-01  David Engster  <deng@randomsample.de>
 
 	* grammars/bovine-grammar.el:
