--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-07  Glenn Morris  <rgm@gnu.org>
+
+	* admin.el (cusver-new-version): Set default.
+	(cusver-check): Improve interactive argument reading.
+
 2012-10-06  Glenn Morris  <rgm@gnu.org>
 
 	* admin.el (cusver-new-version): New variable.
