--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-10-07  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	Enhancements to indentation.
+	* progmodes/python.el (python-indent-context): Give priority to
+	inside-string context.  Make comments indentation markers.
+	(python-indent-region): Do not mess with strings, unless it's the
+	enclosing set of quotes.
+
 2012-10-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* window.el (internal--before-save-selected-window)
