Reformat last entries to fit 80 columns.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,10 +1,11 @@
 2012-10-07  Jan Djärv  <jan.h.d@swipnet.se>
 
-	* nsterm.m (ns_dumpglyphs_image): Only draw slize of image (Bug#12506).
+	* nsterm.m (ns_dumpglyphs_image): Only draw slice of image (Bug#12506).
 
 	* nsterm.m (ns_update_auto_hide_menu_bar): Remove defintion of
 	MAC_OS_X_VERSION_10_6.
-	(syms_of_nsterm): Remove comment about Panther and above for ns-antialias-text.
+	(syms_of_nsterm): Remove comment about Panther and above for
+	ns-antialias-text.
 	* nsterm.h (MAC_OS_X_VERSION_10_3, onTiger): Remove.
 	(EmacsApp): Remove check for >= MAC_OS_X_VERSION_10_4.
 	(struct nsfont_info): Remove check for >= MAC_OS_X_VERSION_10_3.
@@ -12,7 +13,8 @@
 	* nsselect.m (ns_string_from_pasteboard): Remove check for >=
 	MAC_OS_X_VERSION_10_4.
 
-	* nsmenu.m (fillWithWidgetValue:): Remove code for < MAC_OS_X_VERSION_10_2.
+	* nsmenu.m (fillWithWidgetValue:): Remove code for <
+	MAC_OS_X_VERSION_10_2.
 
 	* nsimage.m (setPixmapData, getPixelAtX, setAlphaAtX): Remove onTiger.
 
@@ -21,13 +23,13 @@
 
 	* nsterm.m (ns_in_resize): Remove (Bug#12479).
 	(ns_resize_handle_rect, mouseDown, mouseUp, mouseDragged): Remove.
-	(ns_clear_frame, sendEvent, windowDidResize, drawRect:): Remove ns_in_resize
-	check.
+	(ns_clear_frame, sendEvent, windowDidResize, drawRect:): Remove
+	ns_in_resize check.
 	(ns_clear_frame_area): Remove resize handle code.
 
 	* nsfns.m (ns_in_resize): Remove.
-	(x_set_icon_name, ns_set_name, ns_set_name_as_filename):  Remove ns_in_resize
-	check.
+	(x_set_icon_name, ns_set_name, ns_set_name_as_filename):  Remove
+	ns_in_resize check.
 
 2012-10-07  Paul Eggert  <eggert@cs.ucla.edu>
 
