--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-07  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* term/ns-win.el (ns-read-file-name): Update declaration to match
+	nsfns.m.
+	(ns-respond-to-change-font): Change fontsize separatly so we are sure
+	it is set when font is acted upon.
+
 2012-10-07  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	Enhancements to indentation.
