--- a/lisp/cedet/ChangeLog
+++ b/lisp/cedet/ChangeLog
@@ -1,5 +1,12 @@
 2012-10-07  David Engster  <deng@randomsample.de>
 
+	* semantic/wisent/python.el (semantic-ctxt-current-function)
+	(semantic-ctxt-current-assignment): New overrides, simply
+	returning nil.  The defaults do not work correctly and can send
+	the parser in an inifinite loop (bug#12458).
+
+2012-10-07  David Engster  <deng@randomsample.de>
+
 	* semantic/ede-grammar.el (project-compile-target): Fix grammar
 	compilation after introduction of %provide statement.
 
