--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-07  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	* progmodes/python.el (inferior-python-mode)
+	(python-shell-make-comint): Fixed initialization of local
+	variables copied from parent buffer.
+
 2012-10-07  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* term/ns-win.el (ns-read-file-name): Update declaration to match
