--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,7 +1,12 @@
+2012-10-07  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (read-passwd-map): Don't use `defconst' (bug#12597).
+	(read-passwd): Remove a few more potential sources of leaks.
+
 2012-10-07  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	* progmodes/python.el (inferior-python-mode)
-	(python-shell-make-comint): Fixed initialization of local
+	(python-shell-make-comint): Fix initialization of local
 	variables copied from parent buffer.
 
 2012-10-07  Jan Djärv  <jan.h.d@swipnet.se>
